@@ -1,0 +1,2 @@
+I: fields-bioconductor-homepage source: homepage-for-bioconductor-package-not-canonical https://www.bioconductor.org/packages/release/bioc/html/foo.html
+I: fields-bioconductor-homepage: homepage-for-bioconductor-package-not-canonical https://www.bioconductor.org/packages/release/bioc/html/foo.html
