@@ -5,6 +5,9 @@ lintian (2.5.49) UNRELEASED; urgency=medium
   * checks/debhelper.desc:
     + [CL] Drop double leading spaces in includes-maint-script-parameters
       paragraph that was causing indentation when rendered on lintian.d.o.
+  * checks/fields.{pm,desc}:
+    + [NT] Apply patch from Dylan Aïssi to tag non-canonical uses of
+      the bioconductor homepage in the Homepage field.  (Closes: #839553)
 
  -- Chris Lamb <lamby@debian.org>  Thu, 06 Oct 2016 19:04:23 +0100
 
